--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "dependencies": {
         "express": "^4.17.1",
+        "express-validator": "^6.13.0",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
