--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
         "express-validator": "^6.13.0",
         "mongoose": "^6.0.15",
         "mongoose-unique-validator": "^3.0.0",
+        "multer": "^1.4.4",
         "uuid": "^8.3.2"
     },
     "devDependencies": {
