--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
     "main": "index.js",
     "dependencies": {
         "axios": "^0.24.0",
+        "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "express-validator": "^6.13.0",
